--- a/app/images/stylesheet.css
+++ b/app/images/stylesheet.css
@@ -1,28 +1,28 @@
 /* font-family: "OpenSansRegular"; */
 @font-face {
     font-family: "OpenSansRegular";
-    src: url("../fonts/OpenSansRegular.ttf") format("truetype");
+    src: url("../font/OpenSansRegular.ttf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
 /* font-family: "OpenSansLight"; */
 @font-face {
     font-family: "OpenSansLight";
-    src: url("../fonts/OpenSansLight.ttf") format("truetype");
+    src: url("../font/OpenSansLight.ttf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
 /* font-family: "OpenSansItalic"; */
 @font-face {
     font-family: "OpenSansItalic";
-    src: url("../fonts/OpenSansItalic.ttf") format("truetype");
+    src: url("../font/OpenSansItalic.ttf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
 /* font-family: "OpenSansBold"; */
 @font-face {
     font-family: "OpenSansBold";
-    src: url("../fonts/OpenSansBold.ttf") format("truetype");
+    src: url("../font/OpenSansBold.ttf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
@@ -30,7 +30,7 @@
 /* font-family: "OpenSansBoldItalic"; */
 @font-face {
     font-family: "OpenSansBoldItalic";
-    src: url("../fonts/OpenSansBoldItalic.ttf") format("truetype");
+    src: url("../font/OpenSansBoldItalic.ttf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
@@ -38,7 +38,7 @@
 /* font-family: "OpenSansSemiBold"; */
 @font-face {
     font-family: "OpenSansSemiBold";
-    src: url("../fonts/OpenSansSemiBold.ttf") format("truetype");
+    src: url("../font/OpenSansSemiBold.ttf") format("truetype");
     font-style: normal;
     font-weight: normal;
 }
