--- a/app/css/style.css
+++ b/app/css/style.css
@@ -57,6 +57,7 @@ html, body {
 }
 
 body{
+	font-family: "OpenSansRegular";
     background-image: url(../images/bg.jpg);
     background-position: center 0;
     -webkit-background-size: cover;
